--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <lang3-version>3.5</lang3-version>
     <codec-version>1.10</codec-version>
     <gson-version>2.8.0</gson-version>
+    <qiniu-version>7.1.0</qiniu-version>
   </properties>
 
   <dependencies>
@@ -117,6 +118,12 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>${guave-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.qiniu</groupId>
+      <artifactId>qiniu-java-sdk</artifactId>
+      <version>${qiniu-version}</version>
     </dependency>
 
 
